修正spring配置，进行依赖注入，采用mvc框架

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,9 +27,19 @@ log4j.logger.com.opensymphony.xwork2=WARN
 log4j.logger.org.apache.struts2=WARN
 
 
+log4j.logger.java.sql.Connection=info, stdout
+log4j.logger.java.sql.Statement=debug, stdout
+log4j.logger.java.sql.PreparedStatement=debug, stdout
 
+
+log4j.logger.org.hibernate=error
+log4j.logger.org.hibernate.SQL=debug
 ### log schema export/update ###
 log4j.logger.org.hibernate.tool.hbm2ddl=WARN
+
+
+
+log4j.category.org.springframework = ON
 
 
 ## Custom Logging levels
