--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/db_studentinfo?useUnicode=true&characterEncoding=GBK
+jdbc.url=jdbc:mysql://localhost:3306/unstructdata?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
